[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/SpriteSheets/Objects/Shop/Sprite_shop_pedestal.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Environment/Shop/Pedestal.gd" type="Script" id=2]
[ext_resource path="res://Fonts/CompassPro.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://SFX/Environment/shop_buy.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 20 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 14, 14 )

[sub_resource type="DynamicFont" id=3]
outline_size = 1
outline_color = Color( 0.223529, 0.133333, 0, 1 )
font_data = ExtResource( 3 )

[node name="Pedestal" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 2 )

[node name="Labels" type="Node2D" parent="."]
visible = false
z_index = 1

[node name="Name" type="Label" parent="Labels"]
margin_left = -42.0
margin_top = -46.0
margin_right = 42.0
margin_bottom = -31.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Item"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Price" type="Label" parent="Labels"]
margin_left = -20.0
margin_top = -32.0
margin_right = 20.0
margin_bottom = -17.0
custom_colors/font_color = Color( 1, 0.858824, 0.105882, 1 )
custom_fonts/font = SubResource( 3 )
text = "$ 50"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -5.0
bus = "SFX"

[connection signal="body_entered" from="." to="." method="_on_Pedestal_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Pedestal_body_exited"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
